# RawProcessing

./: .gitignore  CMakeLists.txt  main.cpp
align/: Align.h  ImageAlign.cpp  ImageAlign.h  PyramidLayer.cpp  PyramidLayer.h  Tile.cpp  Tile.h
input/: ImageReader.cpp  ImageReader.h
merge/: ImageMerge.cpp  ImageMerge.h
raw/: CfaPattern.h  Demosaic.cpp  Demosaic.h
raw/filter/: Filter.h  FilterFactory.h  FilterGRBG.cpp  FilterGRBG.h
